--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="center my-font-size">
-      <p class="my-font-color"></p>
+      Hi my name is <p class="my-font-color">Young</p>. Welcome to my website!
     </div>
-    <img src="./" id="pic" class="center">
+    <img src="./me.png" id="pic" class="center">
   </body>
 </html>
